<resources>
    <string name="app_name">税务366</string>

    <string name="bottom_menu_tax">税务</string>
    <string name="bottom_menu_find">发现</string>
    <string name="bottom_menu_mine">我</string>
    <string name="vifi_code">验证码</string>
    <string name="vifi_code_can_not_be_empty">验证码不能为空</string>
    <string name="please_read_introduce">请阅读注册协议</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="forgot_pass">忘记密码?</string>
    <string name="piece">条</string>
    <string name="new_question">最新提问</string>
    <string name="new_answer">最新回答</string>
    <string name="new_move">最新动态</string>
    <string name="info">整天忙忙碌碌,该如何帮助企业纳税?</string>
    <string name="tell_you">认证成为企业用户就告诉你</string>
    <string name="push_info">推荐税务须知</string>
    <string name="tax_know">税务须知</string>
    <string name="personal_tax">个人税务</string>
    <string name="do_tax_know">办税须知</string>
    <string name="clletion_talk">收藏话题</string>
    <string name="nomal_know">税务常识</string>
    <string name="should_know">办税须知</string>
    <string name="discuss">讨论</string>
    <string name="please_input_discuss">请输入讨论内容</string>
    <string name="please_input_discuss_title">请输入讨论标题</string>
    <string name="add_discuss">新增讨论</string>
    <string name="add_answer">添加回答</string>
    <string name="please_input_answer">请输入回答内容</string>
    <string name="please_input_personal_info">请输入私信内容</string>
    <string name="question_lib">问题库</string>
    <string name="personal_industry">个人业务</string>
    <string name="brown">发布</string>
    <string name="guide_video">视频指导</string>
    <string name="industry_news">行业资讯</string>
    <string name="industry">行业</string>
    <string name="industry_select">行业选择</string>
    <string name="tax_type">税种</string>
    <string name="tax_type_select">税种选择</string>
    <string name="news">资讯</string>
    <string name="message">消息</string>
    <string name="local_client">地税客户端</string>
    <string name="country_client">国税客户端</string>g
    <string name="my_question">我的提问</string>
    <string name="my_answer">我的回答</string>
    <string name="my_collection">我的收藏</string>
    <string name="user_callback">用户反馈</string>
    <string name="setting">设置</string>
    <string name="change_avatar">修改头像</string>
    <string name="nick">昵称</string>
    <string name="personal_info">个人信息</string>
    <string name="photos">相册</string>
    <string name="take_photos">拍照</string>
    <string name="please_input_nick">请输入昵称</string>
    <string name="update_nick">修改昵称</string>
    <string name="update_sex">修改性别</string>
    <string name="update_birth">修改生日</string>
    <string name="update_area">修改地区</string>
    <string name="done">完成</string>
    <string name="please_input_callBack_content">请输入反馈内容</string>
    <string name="call_back_sucess">反馈提交成功</string>
    <string name="commit">提交</string>
    <string name="change_pass">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_message">推送消息</string>
    <string name="about_us">关于我们</string>
    <string name="old_pass">旧密码</string>
    <string name="please_input_old_pass">请输入旧密码</string>
    <string name="please_input_new_pass">请输入新密码</string>
    <string name="comfirm_pass">确认密码</string>
    <string name="please_input_again">请再次输入</string>
    <string name="sex">性别</string>
    <string name="next">下一步</string>
    <string name="birthday">生日</string>
    <string name="name">姓名</string>
    <string name="area">地区</string>
    <string name="company_info">企业信息</string>
    <string name="department">部门</string>
    <string name="position">职位</string>
    <string name="company_sess">企业小秘书</string>
    <string name="notice">公告</string>
    <string name="tax_pro">税务票据</string>
    <string name="tax_table">财税报表</string>
    <string name="up">赞</string>
    <string name="down">踩</string>
    <string name="collection">收藏</string>
    <string name="phone">电话</string>
    <string name="again_login_out">再按一次退出</string>
    <string name="send_personal_info">私信</string>
    <string name="search_hot">热搜</string>
    <string name="search_all">全部</string>
    <string name="sign">签到</string>
      <string name="hello_world">
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
</string>
</resources>
