<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:clipToPadding="true"
                android:fitsSystemWindows="true">

    <include
        android:id="@+id/include"
        layout="@layout/ease_search_bar_with_padding"></include>

    <LinearLayout
        android:id="@+id/lv_top_hot_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:orientation="vertical"
        android:paddingLeft="11.5dp"
        android:paddingRight="11.5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/search_hot"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search_all"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/search_all"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/search_discuss"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8.5dp"
                android:layout_marginRight="8.5dp"
                android:layout_weight="0.33"
                android:text="@string/discuss"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/search_question"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/question_lib"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11.5dp">

            <Button
                android:id="@+id/search_should_know"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/should_know"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/search_country_client"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8.5dp"
                android:layout_marginRight="8.5dp"
                android:layout_weight="0.33"
                android:text="@string/country_client"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/search_local_client"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/local_client"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11.5dp">

            <Button
                android:id="@+id/search_news"
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/news"
                android:textColor="@color/text_color"/>

            <Button
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8.5dp"
                android:layout_marginRight="8.5dp"
                android:layout_weight="0.33"
                android:text="@string/industry_news"
                android:textColor="@color/text_color"
                android:visibility="invisible"/>

            <Button
                style="@style/clickable_layout"
                android:layout_width="111dp"
                android:layout_height="30dp"
                android:layout_weight="0.33"
                android:text="@string/search_all"
                android:textColor="@color/text_color"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
