<?xml version="1.0" encoding="utf-8"?>
<TabHost
    android:id="@android:id/tabhost"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <com.easemob.easeui.widget.EaseTitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.easemob.easeui.widget.EaseTitleBar>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"/>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/diliver_line"></View>

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:background="@color/white"
            android:gravity="left"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/mainTabs_radio_tax"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/tax_index_selector"
                android:text="@string/bottom_menu_tax"
                android:textColor="@drawable/tabhost_text_color"/>

            <RadioButton
                android:id="@+id/mainTabs_radio_find"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/find_index_selector"
                android:text="@string/bottom_menu_find"
                android:textColor="@drawable/tabhost_text_color"/>

            <RadioButton
                android:id="@+id/mainTabs_radio_mine"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/mine_index_selector"
                android:text="@string/bottom_menu_mine"
                android:textColor="@drawable/tabhost_text_color"/>
        </RadioGroup>
    </LinearLayout>

</TabHost>