<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/background_color"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/iv_company_sess" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/company_sess"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightgray" />


    </LinearLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/diliver_line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/iv_notice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/notice"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightgray" />


    </LinearLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/diliver_line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/iv_tax_pro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/tax_pro"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightgray" />


    </LinearLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/diliver_line"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/iv_tax_table" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/tax_table"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightgray" />


    </LinearLayout>
</LinearLayout>
