<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bottom_menu_color"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.easemob.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.easemob.easeui.widget.EaseTitleBar>

    <RelativeLayout
        android:id="@+id/rl_change_pass"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/change_pass"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/clear_cache"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_push_message"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/push_message"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_about_us"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@+id/tv"
            android:background="@color/diliver_line"></View>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/about_us"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv"
            android:background="@color/diliver_line"></View>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_quite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/btn_quite_selector"
        android:onClick="onClick"
        android:text="@string/exit_group"
        android:textColor="@color/white"
        android:textSize="20dp"/>
</LinearLayout>
