<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_myinfo"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/titile_color"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher"/>


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageView8"
            android:layout_toRightOf="@+id/imageView7"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前帐号:18222107512"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_my_question"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/my_question"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_my_answer"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/my_answer"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_my_collection"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/my_collection"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:background="@color/diliver_line"></View>


    <RelativeLayout
        android:id="@+id/rl_user_callback"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:onClick="onClick">


        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/user_callback"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>

    <RelativeLayout
        android:id="@+id/rl_setting"
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/iv_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diliver_line"></View>
</LinearLayout>
